Fix .po encoding

--- a/game/Language/en/Map0007.po
+++ b/game/Language/en/Map0007.po
@@ -11,57 +11,57 @@ msgstr ""
 #. ID 1, Page 1, Line 5, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@@ @“V‹ó‚Í‰i‹v‚É‘“‚­\\.\\.@@@@@@@@@\n"
-"@@     ‘å’n‚Í‰i‰“‚É—h‚é‚ª‚¹‚Í‚¹‚¸‚É‚ ‚è\\|\\.\\.\n"
-"@@@  @@t‚Æ‚à‚È‚ê‚Î‰Ôç‚«—‚ê\\\\\\|\\|\\|\\^"
+"　　　　　　　 　天空は永久に蒼く\\.\\.　　　　　　　　　\n"
+"　　     大地は永遠に揺るがせはせずにあり\\|\\.\\.\n"
+"　　　  　　春ともなれば花咲き乱れ――\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 10, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@@@‚¾‚ªA\\.\\.lŠÔ‚½‚éŒN‚æ\\|\\.\\.@@@@@@@@\n"
+"　　　　　　　　だが、\\.\\.人間たる君よ\\|\\.\\.　　　　　　　　\n"
 "\n"
-"@@@@ŒN‚Í‚Ç‚ê‚¾‚¯¶‚«’·‚ç‚¦‚Ä‚¢‚­‚à‚Ì‚©\\|\\|\\|\\^"
+"　　　　君はどれだけ生き長らえていくものか\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 16, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@ @•SÎ‚Æ‚Í‹–‚³‚ê‚Êg‚Ìã‚Å‹C‚Ü‚®‚êˆÔ‚Þ‚Æ‚Ä\\.\\.@@@\n"
-"    @@‘S‚Ä‚±‚Ì‘å’n‚Ì™R‚«‹Y‚ê‚ðŠy‚µ‚Þ‚¾‚¯\\|\\|\\|\\^"
+"　 　百歳とは許されぬ身の上で気まぐれ慰むとて\\.\\.　　　\n"
+"    　　全てこの大地の儚き戯れを楽しむだけ\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 21, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@‘´ˆ”Þˆ‚É˜È‚ÝŒ©‰º‚ë‚µ‹‹‚¦\\|\\|\\|\\^@@@@@@"
+"　　　　　　其処彼処に佇み見下ろし給え\\|\\|\\|\\^　　　　　　"
 msgstr ""
 
 #. ID 1, Page 1, Line 25, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@@ ŒŽŒõ‚ð—‚Ñ‚½•æ‚Ìã‚É@@@@@@@\n"
-"@  @À‚µ‚ÄçL‚é‚à‚Ì‚ÍrX‚µ‚­‚à•s‹C–¡‚È•¨‰e\\|\\|\\|\\^"
+"　　　　　　　 月光を浴びた墓の上に　　　　　　　\n"
+"　  　座して蹲るものは荒々しくも不気味な物影\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 29, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@@@‚»‚ê‚ÍŒÇ“Æ‚È‰Žˆê•C\\|\\.\\.\n"
+"　　　　　　　　それは孤独な猿一匹\\|\\.\\.\n"
 "\n"
-"@@@@@ @@’®‚¯A\\.‚»‚Ì‰s‚«‹©‚Ñ‚ð\\|\\|\\.\\.\\^"
+"　　　　　 　　聴け、\\.その鋭き叫びを\\|\\|\\.\\.\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 34, Pos (0,0)
 msgid ""
 "\\S[6]\n"
-"@@@@@@ @‚±‚Ì¢‚ÌŠÃ”ü‚È‚è‚É\\.\\.@@@@@@@@@\n"
-"@    @b‚‚­‚Þ‚¹‚Ñ‹ƒ‚«â‹©‚µ‚Ä‚¢‚­‚Ì‚ð\\\\\\|\\|\\|\\.\\.\\^"
+"　　　　　　 　この世の甘美な香りに\\.\\.　　　　　　　　　\n"
+"　    　甲高くむせび泣き絶叫していくのを――\\|\\|\\|\\.\\.\\^"
 msgstr ""
 
 #. ID 1, Page 1, Line 38, Pos (0,0)
 msgid ""
 "\\S[5]\n"
-"@@@@@@@  —›”’u”ß‰Ìsv‚æ‚è\\|\\.\\.\\^@@@@@@@"
+"　　　　　　　  李白「悲歌行」より\\|\\.\\.\\^　　　　　　　"
 msgstr ""
 
