--- a/game/Language/en/RPG_RT.ldb.common.po
+++ b/game/Language/en/RPG_RT.ldb.common.po
@@ -9,57 +9,57 @@ msgstr ""
 "X-CreatedBy: LcfTrans"
 
 #. ID 30, Line 7
-msgid "\\>@@@@@@@‚¨‚¢cc"
+msgid "\\>　　　　　　　おい……"
 msgstr ""
 
 #. ID 30, Line 8
 msgid ""
-"\\>@@@@@@@‚Ä‚ß‚¦A‚Ä‚ß‚¦‚Ì³‘Ì‚ª•ª‚©‚Á‚½‚ºB\n"
-"\\>@@@@@@@‚¨‚©‚µ‚¢‚Æ‚ÍŽv‚Á‚Ä‚½‚ñ‚¾‚ªA\n"
-"\\>@@@@@@@‚Ä‚ß‚¦A¶‘Ì•ºŠí‚Æ‚©‚¢‚¤‚â‚Â‚¾‚ëB"
+"\\>　　　　　　　てめえ、てめえの正体が分かったぜ。\n"
+"\\>　　　　　　　おかしいとは思ってたんだが、\n"
+"\\>　　　　　　　てめえ、生体兵器とかいうやつだろ。"
 msgstr ""
 
 #. ID 30, Line 11
 msgid ""
-"\\>@@@@@@@lŠÔ‚ð‰z‚¦‚½í—Í‚ðŽ‚ÂA\n"
-"\\>@@@@@@@“ª‚Ì‚¨‚©‚µ‚¢ŽEClŒ`B‚»‚¤‚¾‚ëH"
+"\\>　　　　　　　人間を越えた戦力を持つ、\n"
+"\\>　　　　　　　頭のおかしい殺戮人形。そうだろ？"
 msgstr ""
 
 #. ID 30, Line 13
 msgid ""
-"\\>@@@@@@@‰´‚Í‚±‚ñ‚È‚Æ‚±‚ë‚Å\n"
-"\\>@@@@@@@‚­‚½‚Î‚é‚í‚¯‚É‚Í‚¢‚©‚Ë‚¦B\n"
-"\\>@@@@@@@ccŽ€‚ñ‚Å‚à‚ç‚¤‚ºB"
+"\\>　　　　　　　俺はこんなところで\n"
+"\\>　　　　　　　くたばるわけにはいかねえ。\n"
+"\\>　　　　　　　……死んでもらうぜ。"
 msgstr ""
 
 #. ID 30, Line 27
-msgid "\\>@@@@@@@‚Ð‚Æ‚Â‚ÌŠmM‚ð“¾‚½B"
+msgid "\\>　　　　　　　ひとつの確信を得た。"
 msgstr ""
 
 #. ID 30, Line 28
 msgid ""
-"\\>@@@@@@@ŒN‚ÍA¶‘Ì•ºŠí‚È‚Ì‚¾‚ë‚¤H\n"
-"\\>@@@@@@@Š´î‚Ì—}§‚ª—˜‚©‚¸A”­‹¶‚µ‚ÄA\n"
-"\\>@@@@@@@–Ú‚É“ü‚é‚à‚Ì‘S‚Ä‚ðŽE‚·‚Æ‚¢‚¤B"
+"\\>　　　　　　　君は、生体兵器なのだろう？\n"
+"\\>　　　　　　　感情の抑制が利かず、発狂して、\n"
+"\\>　　　　　　　目に入るもの全てを殺すという。"
 msgstr ""
 
 #. ID 30, Line 31
 msgid ""
-"\\>@@@@@@@‚Ü‚ Ae‚ðŒü‚¯‚ç‚ê‚Ä‚à\n"
-"\\>@@@@@@@Žd•û‚ª‚È‚¢‚ÆŽv‚¤‚¾‚ë‚¤H"
+"\\>　　　　　　　まあ、銃を向けられても\n"
+"\\>　　　　　　　仕方がないと思うだろう？"
 msgstr ""
 
 #. ID 30, Line 33
 msgid ""
-"\\>@@@@@@@‚±‚¤‚·‚é‚æ‚è‘¼‚È‚¢B\n"
-"\\>@@@@@@@ˆ«‚¢‚ª‚±‚±‚ÅŽ€‚ñ‚Å‚­‚ê‹‹‚¦B"
+"\\>　　　　　　　こうするより他ない。\n"
+"\\>　　　　　　　悪いがここで死んでくれ給え。"
 msgstr ""
 
 #. ID 30, Line 46
 msgid ""
-"\\>@@@@@@@cc‚à‚¤Œ™I\n"
-"\\>@@@@@@@‚Ç‚¤‚¹ŽE‚·‚ñ‚Å‚µ‚åA\n"
-"\\>@@@@@@@‚ ‚½‚µ‚Ì‚±‚Æ‚àI"
+"\\>　　　　　　　……もう嫌！\n"
+"\\>　　　　　　　どうせ殺すんでしょ、\n"
+"\\>　　　　　　　あたしのことも！"
 msgstr ""
 
 #. ID 30, Line 51
@@ -68,251 +68,251 @@ msgstr ""
 #. ID 67, Line 430
 #. ID 67, Line 524
 #. ID 69, Line 542
-msgid "\\> ccccB"
+msgid "\\> …………。"
 msgstr ""
 
 #. ID 30, Line 54
-msgid "\\>@@@@@@@‚ ‚ ‚ ‚ ‚ I"
+msgid "\\>　　　　　　　あああああ！"
 msgstr ""
 
 #. ID 30, Line 55
 msgid ""
-"\\>@@@@@@@‚Ç‚¤‚µ‚ÄA‚Ç‚¤‚µ‚ÄI\n"
-"\\>@@@@@@@M‚¶‚ç‚ê‚él‚Í‚Ç‚±‚É‚à‚¢‚È‚¢‚ÌI"
+"\\>　　　　　　　どうして、どうして！\n"
+"\\>　　　　　　　信じられる人はどこにもいないの！"
 msgstr ""
 
 #. ID 30, Line 57
 msgid ""
-"\\>@@@@@@@ƒ_ƒŠƒ„‚¿‚á‚ñccM‚¶‚Ä‚½‚Ì‚Écc\n"
-"\\>@@@@@@@‚¤A‚¤‚í‚ ‚ ‚ ‚ ‚ ‚ ‚ÁI"
+"\\>　　　　　　　ダリヤちゃん……信じてたのに……\n"
+"\\>　　　　　　　う、うわああああああっ！"
 msgstr ""
 
 #. ID 30, Line 70
 msgid ""
-"\\>@@@@@@@“Ë‘R‚¾‚¯‚ÇA‚²‚ß‚ñ‚È‚³‚¢‚ËB\n"
-"\\>@@@@@@@‚ ‚È‚½‚ðŽn––‚·‚é‚±‚Æ‚ÉŒˆ‚ß‚½‚íB"
+"\\>　　　　　　　突然だけど、ごめんなさいね。\n"
+"\\>　　　　　　　あなたを始末することに決めたわ。"
 msgstr ""
 
 #. ID 30, Line 72
 msgid ""
-"\\>@@@@@@@ƒvƒƒgƒ^ƒCƒv‚Ì¶‘Ì•ºŠí‚Í\n"
-"\\>@@@@@@@Š´î‚Ì—}§‚ª“ï‚µ‚¢‚Æ•·‚¢‚Ä‚¢‚½‚¯‚ÇA\n"
-"\\>@@@@@@@‚æ‚­•ª‚©‚Á‚½B‚ ‚È‚½‚ÍŠëŒ¯‚·‚¬‚éB"
+"\\>　　　　　　　プロトタイプの生体兵器は\n"
+"\\>　　　　　　　感情の抑制が難しいと聞いていたけど、\n"
+"\\>　　　　　　　よく分かった。あなたは危険すぎる。"
 msgstr ""
 
 #. ID 30, Line 75
 msgid ""
-"\\>@@@@@@@Ž„‚Í‚ ‚È‚½‚Ì‚æ‚¤‚ÈŒ‡Š×•i‚Æ‚Íˆá‚¤A\n"
-"\\>@@@@@@@öÝ”\\—Í‚ðuŠÔ“I‚ÉŠJ•ú‚·‚éA\n"
-"\\>@@@@@@@ÅVƒ^ƒCƒv‚Ì¶‘Ì•ºŠíB"
+"\\>　　　　　　　私はあなたのような欠陥品とは違う、\n"
+"\\>　　　　　　　潜在能力を瞬間的に開放する、\n"
+"\\>　　　　　　　最新タイプの生体兵器。"
 msgstr ""
 
 #. ID 30, Line 78
 msgid ""
-"\\>@@@@@@@‹Œ•¾‚ð‹ì’€‚·‚é‚Ì‚àA\n"
-"\\>@@@@@@@Ž„‚Ì‹`–±‚Ì‚Ð‚Æ‚ÂB"
+"\\>　　　　　　　旧弊を駆逐するのも、\n"
+"\\>　　　　　　　私の義務のひとつ。"
 msgstr ""
 
 #. ID 30, Line 80
-msgid "\\>@@@@@@@–{‹C‚Å‚¢‚©‚¹‚Ä‚à‚ç‚¤‚íB"
+msgid "\\>　　　　　　　本気でいかせてもらうわ。"
 msgstr ""
 
 #. ID 31, Line 15
 msgid ""
-"\\>@@@@@@@‚ [A‚¨‚¢A‚¿‚å‚Á‚Æ‚¾‚¯‘Ò‚Á‚Ä‚­‚êB\n"
-"\\>@@@@@@@–òŽg‚í‚Ë‚¦‚Æ‚æcc\n"
-"\\>@@@@@@@­‚µƒtƒ‰ƒtƒ‰‚µ‚Ä‚«‚â‚ª‚Á‚½cc"
+"\\>　　　　　　　あー、おい、ちょっとだけ待ってくれ。\n"
+"\\>　　　　　　　薬使わねえとよ……\n"
+"\\>　　　　　　　少しフラフラしてきやがった……"
 msgstr ""
 
 #. ID 31, Line 26
 msgid ""
-"\\>@@@@@@@‚¨‚µAƒIƒbƒP[‚¾B\n"
-"\\>@@@@@@@‚»‚ñ‚¶‚á‚Ü‚½A‚Í‚è‚«‚Á‚Äs‚±‚¤‚ºB"
+"\\>　　　　　　　おし、オッケーだ。\n"
+"\\>　　　　　　　そんじゃまた、はりきって行こうぜ。"
 msgstr ""
 
 #. ID 31, Line 34
 msgid ""
-"\\>@@@@@@@‚µ‚Î‚µ•à‚Ý‚ðŽ~‚ß‚Ä‚à‚ç‚¦‚È‚¢‚©H\n"
-"\\>@@@@@@@‰ñ•œ–ò‚ðŽg—p‚·‚éB"
+"\\>　　　　　　　しばし歩みを止めてもらえないか？\n"
+"\\>　　　　　　　回復薬を使用する。"
 msgstr ""
 
 #. ID 31, Line 44
-msgid "\\>@@@@@@@Ž¸—ç‚µ‚½B‚Å‚Íæ‚ð‰‚±‚¤B"
+msgid "\\>　　　　　　　失礼した。では先を往こう。"
 msgstr ""
 
 #. ID 31, Line 51
 msgid ""
-"\\>@@@@@@@‚¤‚¤[A‚¿‚å‚Á‚ÆƒXƒgƒbƒv[B\n"
-"\\>@@@@@@@‚¨–òŽg‚í‚È‚¢‚ÆA‚»‚ë‚»‚ë‚È‚ñ‚©cc"
+"\\>　　　　　　　ううー、ちょっとストップー。\n"
+"\\>　　　　　　　お薬使わないと、そろそろなんか……"
 msgstr ""
 
 #. ID 31, Line 61
-msgid "\\>@@@@@@@‚Í‚Ÿcc¶‚«•Ô‚Á‚½[B"
+msgid "\\>　　　　　　　はぁ……生き返ったー。"
 msgstr ""
 
 #. ID 31, Line 62
 msgid ""
-"\\>@@@@@@@‚æ‚µA‹C‚ðŽæ‚è’¼‚µ‚ÄA\n"
-"\\>@@@@@@@ƒŒƒbƒcƒS[‚¾I"
+"\\>　　　　　　　よし、気を取り直して、\n"
+"\\>　　　　　　　レッツゴーだ！"
 msgstr ""
 
 #. ID 31, Line 70
 msgid ""
-"\\>@@@@@@@‚Ë‚¦A­‚µŽ~‚Ü‚Á‚Ä‚­‚ê‚éH\n"
-"\\>@@@@@@@‚³‚·‚ª‚ÉA‹ê‚µ‚­‚È‚Á‚Ä‚«‚½‚ícc"
+"\\>　　　　　　　ねえ、少し止まってくれる？\n"
+"\\>　　　　　　　さすがに、苦しくなってきたわ……"
 msgstr ""
 
 #. ID 31, Line 80
-msgid "\\>@@@@@@@‚Ó‚¤cc–ò‚ðŽg‚Á‚½‚©‚ç‚à‚¤‘åä•vB"
+msgid "\\>　　　　　　　ふう……薬を使ったからもう大丈夫。"
 msgstr ""
 
 #. ID 31, Line 81
-msgid "\\>@@@@@@@‚³‚ As‚«‚Ü‚µ‚å‚¤B"
+msgid "\\>　　　　　　　さあ、行きましょう。"
 msgstr ""
 
 #. ID 48, Line 29
 msgid ""
-"\\>\\C[2] õHõõõõõõõõõõõõŒŒõõõ\n"
-"\\>\\C[2] õõõõõõŽEõõõõõõõõõõõ\n"
-"\\>\\C[2] õõõõõõõõõõõŽ€õõõõõõ\n"
-"\\>\\C[2] õõ‘žõõõõõõõõõõõõõIõ\\<\\.\\^"
+"\\>\\C[2] †？††††††††††††血†††\n"
+"\\>\\C[2] ††††††殺†††††††††††\n"
+"\\>\\C[2] †††††††††††死††††††\n"
+"\\>\\C[2] ††憎†††††††††††††！†\\<\\.\\^"
 msgstr ""
 
 #. ID 48, Line 38
-msgid "\\>@@@@@@@‚ÈA‰½‚È‚ñ‚¾‚æA‚¨‘OccH"
+msgid "\\>　　　　　　　な、何なんだよ、お前……？"
 msgstr ""
 
 #. ID 48, Line 39
 #. ID 48, Line 45
-msgid "\\>@@@@@@@ccccB"
+msgid "\\>　　　　　　　…………。"
 msgstr ""
 
 #. ID 48, Line 46
-msgid "\\>@@@@@@@ccŒN‚ÍB"
+msgid "\\>　　　　　　　……君は。"
 msgstr ""
 
 #. ID 48, Line 47
-msgid "\\>@@@@@@@‚¢‚âA‚â‚ß‚Ä‚¨‚±‚¤B"
+msgid "\\>　　　　　　　いや、やめておこう。"
 msgstr ""
 
 #. ID 48, Line 53
 msgid ""
-"\\>@@@@@@@•|‚¢‚æccƒ_ƒŠƒ„‚¿‚á‚ñcc\n"
-"\\>@@@@@@@ˆê‘Ì‚Ç‚¤‚µ‚¿‚á‚Á‚½‚ÌA‚Ë‚¦ccH"
+"\\>　　　　　　　怖いよ……ダリヤちゃん……\n"
+"\\>　　　　　　　一体どうしちゃったの、ねえ……？"
 msgstr ""
 
 #. ID 48, Line 60
 msgid ""
-"\\>@@@@@@@‚â‚Í‚ècc\n"
-"\\>@@@@@@@ƒvƒƒgƒ^ƒCƒvccH"
+"\\>　　　　　　　やはり……\n"
+"\\>　　　　　　　プロトタイプ……？"
 msgstr ""
 
 #. ID 48, Line 95
-msgid "\\>\\C[2] õõõõõõõõõõõõõõõõõõ\\<\\.\\.\\^"
+msgid "\\>\\C[2] ††††††††††††††††††\\<\\.\\.\\^"
 msgstr ""
 
 #. ID 48, Line 101
 msgid ""
-"\\>@@@@@@@‚ñccH\n"
-"\\>@@@@@@@¡A‰½‚©Œ¾‚í‚È‚©‚Á‚½‚©ccH"
+"\\>　　　　　　　ん……？\n"
+"\\>　　　　　　　今、何か言わなかったか……？"
 msgstr ""
 
 #. ID 48, Line 103
 msgid ""
-"\\>@@@@@@@‚Á‚ÄAŒû‚ª‚«‚¯‚é‚Í‚¸‚à‚Ë‚¦‚µA\n"
-"\\>@@@@@@@‹C‚Ì‚¹‚¢cc‚¾‚æ‚ÈH"
+"\\>　　　　　　　って、口がきけるはずもねえし、\n"
+"\\>　　　　　　　気のせい……だよな？"
 msgstr ""
 
 #. ID 48, Line 110
 msgid ""
-"\\>@@@@@@@‚Þcc\n"
-"\\>@@@@@@@¡A‰½‚©‹‘å‚ÈŽE‹C‚Ì‰ò‚Ì‚æ‚¤‚Ècc"
+"\\>　　　　　　　む……\n"
+"\\>　　　　　　　今、何か巨大な殺気の塊のような……"
 msgstr ""
 
 #. ID 48, Line 117
 msgid ""
-"\\>@@@@@@@‚¦A‚¦A‚¦ccH\n"
-"\\>@@@@@@@‚Ç‚¤‚µ‚½‚Ìƒ_ƒŠƒ„‚¿‚á‚ñccH"
+"\\>　　　　　　　え、え、え……？\n"
+"\\>　　　　　　　どうしたのダリヤちゃん……？"
 msgstr ""
 
 #. ID 48, Line 119
-msgid "\\>@@@@@@@¡A‰½‚©ccH"
+msgid "\\>　　　　　　　今、何か……？"
 msgstr ""
 
 #. ID 48, Line 125
-msgid "\\>@@@@@@@ccH"
+msgid "\\>　　　　　　　……？"
 msgstr ""
 
 #. ID 48, Line 126
 msgid ""
-"\\>@@@@@@@ƒGƒŠƒA‚W‚V‚ÌŒRŽ–ŽÀŒ±Ž{Ý‚Ì‚æ‚¤‚Ècc\n"
-"\\>@@@@@@@‚Ü‚³‚©A‚Ëcc"
+"\\>　　　　　　　エリア８７の軍事実験施設のような……\n"
+"\\>　　　　　　　まさか、ね……"
 msgstr ""
 
 #. ID 49, Line 11
-msgid "\\>@@@@@@@‚Á‚½‚­AŒ©‚Ä‚ç‚ñ‚Ë‚¦‚æcc"
+msgid "\\>　　　　　　　ったく、見てらんねえよ……"
 msgstr ""
 
 #. ID 49, Line 12
-msgid "\\>@@@@@@@‚Ù‚çA‰´‚Ì‰ñ•œ–ò‚â‚é‚©‚ç‚³B"
+msgid "\\>　　　　　　　ほら、俺の回復薬やるからさ。"
 msgstr ""
 
 #. ID 49, Line 13
 msgid ""
-"\\>@@@@@@@cc‚ ‚ñ‚¾‚æH\n"
-"\\>@@@@@@@•Ê‚ÉŠ´ŽÓ‚Æ‚©‚ð\n"
-"\\>@@@@@@@—v‹‚µ‚Ä‚é‚í‚¯‚¶‚á‚Ë‚¦‚¼B"
+"\\>　　　　　　　……あんだよ？\n"
+"\\>　　　　　　　別に感謝とかを\n"
+"\\>　　　　　　　要求してるわけじゃねえぞ。"
 msgstr ""
 
 #. ID 49, Line 16
 msgid ""
-"\\>@@@@@@@cc‚¢‚¢‚©‚ç‚³‚Á‚³‚Æ\n"
-"\\>@@@@@@@Žg‚Á‚¿‚Ü‚¦‚æ”nŽ­–ì˜YI"
+"\\>　　　　　　　……いいからさっさと\n"
+"\\>　　　　　　　使っちまえよ馬鹿野郎！"
 msgstr ""
 
 #. ID 49, Line 33
 msgid ""
-"\\>@@@@@@@‘Ò‚¿‚½‚Ü‚¦B\n"
-"\\>@@@@@@@‚»‚ñ‚Èó‘Ô‚Å‚ ‚è‚È‚ª‚çA\n"
-"\\>@@@@@@@ŒN‚Í‰ñ•œ–ò‚·‚çŽ‚Á‚Ä‚¢‚È‚¢‚Ì‚©B"
+"\\>　　　　　　　待ちたまえ。\n"
+"\\>　　　　　　　そんな状態でありながら、\n"
+"\\>　　　　　　　君は回復薬すら持っていないのか。"
 msgstr ""
 
 #. ID 49, Line 36
-msgid "\\>@@@@@@@Ž„‚Ì‚ð‚Ð‚Æ‚ÂŽg‚Á‚½‚ç‚¢‚¢B"
+msgid "\\>　　　　　　　私のをひとつ使ったらいい。"
 msgstr ""
 
 #. ID 49, Line 37
 msgid ""
-"\\>@@@@@@@cc‰½A‚»‚ê‚ª‡—“I‚Æ\n"
-"\\>@@@@@@@”»’f‚µ‚½‚Ü‚Å‚Ì‚±‚ÆB\n"
-"\\>@@@@@@@ŒÌ‚ÉŠ´ŽÓ‚É‚Í‹y‚Î‚È‚¢B"
+"\\>　　　　　　　……何、それが合理的と\n"
+"\\>　　　　　　　判断したまでのこと。\n"
+"\\>　　　　　　　故に感謝には及ばない。"
 msgstr ""
 
 #. ID 49, Line 55
-msgid "\\>@@@@@@@ƒ_Aƒ_ƒŠƒ„‚¿‚á‚ñI"
+msgid "\\>　　　　　　　ダ、ダリヤちゃん！"
 msgstr ""
 
 #. ID 49, Line 56
 msgid ""
-"\\>@@@@@@@‚Ë‚¦A‘åä•vccH\n"
-"\\>@@@@@@@‚È‚ñ‚©A‚Ó‚ç‚Ó‚ç‚µ‚Ä‚é‚æH"
+"\\>　　　　　　　ねえ、大丈夫……？\n"
+"\\>　　　　　　　なんか、ふらふらしてるよ？"
 msgstr ""
 
 #. ID 49, Line 58
 msgid ""
-"\\>@@@@@@@‚ ‚½‚µ‚ÌŽ‚Á‚Ä‚é‚¨–òŽg‚Á‚ÄB\n"
-"\\>@@@@@@@‚ ‚½‚µ‚Í‘S‘R•½‹C‚¾‚©‚çB\n"
-"\\>@@@@@@@‚ËH"
+"\\>　　　　　　　あたしの持ってるお薬使って。\n"
+"\\>　　　　　　　あたしは全然平気だから。\n"
+"\\>　　　　　　　ね？"
 msgstr ""
 
 #. ID 49, Line 76
-msgid "\\>@@@@@@@‚à‚¤A‚ ‚È‚½“|‚ê‚»‚¤‚¶‚á‚È‚¢‚ÌI"
+msgid "\\>　　　　　　　もう、あなた倒れそうじゃないの！"
 msgstr ""
 
 #. ID 49, Line 77
 msgid ""
-"\\>@@@@@@@cc‚±‚ê‚ðŽg‚Á‚ÄB\n"
-"\\>@@@@@@@‚³‚ B"
+"\\>　　　　　　　……これを使って。\n"
+"\\>　　　　　　　さあ。"
 msgstr ""
 
 #. ID 49, Line 131
@@ -325,7 +325,7 @@ msgstr ""
 #. Contains choice at line 2 (2 options)
 #. ID 67, Line 407
 #. Contains choice at line 2 (3 options)
-msgid "\\> \\C[2]õ@\\C[0]u@@@@@@@@@@@@@Hv\\<\\.\\.\\."
+msgid "\\> \\C[2]†　\\C[0]「　　　　　　　　　　　　　？」\\<\\.\\.\\."
 msgstr ""
 
 #. ID 49, Line 132
@@ -335,9 +335,9 @@ msgstr ""
 #. ID 67, Line 408
 #. Choice (3 options, embedded in a message)
 msgid ""
-"\\>\\C[2]@@@@@@@ @ŽE‚·\n"
-"\\>\\C[2]@@@@@@@ @ŽE‚·\n"
-"\\>\\C[2]@@@@@@@ @ŽE‚·"
+"\\>\\C[2]　　　　　　　 　殺す\n"
+"\\>\\C[2]　　　　　　　 　殺す\n"
+"\\>\\C[2]　　　　　　　 　殺す"
 msgstr ""
 
 #. ID 49, Line 143
@@ -345,8 +345,8 @@ msgstr ""
 #. ID 50, Line 50
 #. ID 50, Line 135
 msgid ""
-"\\>@@@@@@@‚ÄA‚Ä‚ß‚¦ccI\n"
-"\\>@@@@@@@ŒŒ–À‚¢‚â‚ª‚Á‚½‚©I"
+"\\>　　　　　　　て、てめえ……！\n"
+"\\>　　　　　　　血迷いやがったか！"
 msgstr ""
 
 #. ID 49, Line 157
@@ -354,9 +354,9 @@ msgstr ""
 #. ID 50, Line 64
 #. ID 50, Line 149
 msgid ""
-"\\>@@@@@@@‚ÞAŽ„‚Én‚ðŒü‚¯‚é‚©cc\n"
-"\\>@@@@@@@”–XŠ´‚¶‚Ä‚Í‚¢‚½‚ªA\n"
-"\\>@@@@@@@ŒN‚Í‚â‚Í‚ècc"
+"\\>　　　　　　　む、私に刃を向けるか……\n"
+"\\>　　　　　　　薄々感じてはいたが、\n"
+"\\>　　　　　　　君はやはり……"
 msgstr ""
 
 #. ID 49, Line 172
@@ -364,9 +364,9 @@ msgstr ""
 #. ID 50, Line 79
 #. ID 50, Line 164
 msgid ""
-"\\>@@@@@@@‚¿‚åA‚¿‚å‚Á‚Æ‘Ò‚Á‚ÄI\n"
-"\\>@@@@@@@‰½‚©‚Ìç’k‚¾‚æ‚ËA\n"
-"\\>@@@@@@@ƒ_ƒŠƒ„‚¿‚á‚ñccH"
+"\\>　　　　　　　ちょ、ちょっと待って！\n"
+"\\>　　　　　　　何かの冗談だよね、\n"
+"\\>　　　　　　　ダリヤちゃん……？"
 msgstr ""
 
 #. ID 49, Line 175
@@ -374,8 +374,8 @@ msgstr ""
 #. ID 50, Line 82
 #. ID 50, Line 167
 msgid ""
-"\\>@@@@@@@‚Ë‚¦A‚¿‚å‚Á‚Æ‚â‚ß‚Ä‚Á‚Ä‚Îcc\n"
-"\\>@@@@@@@‚â‚ß‚Ä‚æ‚¨‚ÁI"
+"\\>　　　　　　　ねえ、ちょっとやめてってば……\n"
+"\\>　　　　　　　やめてよおっ！"
 msgstr ""
 
 #. ID 49, Line 189
@@ -383,8 +383,8 @@ msgstr ""
 #. ID 50, Line 96
 #. ID 50, Line 181
 msgid ""
-"\\>@@@@@@@cc‚±‚¤‚¢‚¤“WŠJ‚Í\n"
-"\\>@@@@@@@—\\‘ª‚µ‚Ä‚È‚¢‚Å‚à‚È‚©‚Á‚½‚¯‚ÇB"
+"\\>　　　　　　　……こういう展開は\n"
+"\\>　　　　　　　予測してないでもなかったけど。"
 msgstr ""
 
 #. ID 49, Line 191
@@ -392,9 +392,9 @@ msgstr ""
 #. ID 50, Line 98
 #. ID 50, Line 183
 msgid ""
-"\\>@@@@@@@‚Ü‚ ‚¢‚¢‚íB\n"
-"\\>@@@@@@@–O‚­‚Ü‚Å‚à‚â‚é‚Æ‚¢‚¤‚È‚çA\n"
-"\\>@@@@@@@Ž„‚Í–{‹C‚Å‚ ‚È‚½‚ð’×‚·‚¾‚¯‚æB"
+"\\>　　　　　　　まあいいわ。\n"
+"\\>　　　　　　　飽くまでもやるというなら、\n"
+"\\>　　　　　　　私は本気であなたを潰すだけよ。"
 msgstr ""
 
 #. ID 49, Line 219
@@ -402,7 +402,7 @@ msgstr ""
 #. ID 50, Line 130
 #. Choice (2 options, embedded in a message)
 msgid ""
-"\\>\\C[2]                 ŽE‚·\n"
+"\\>\\C[2]                 殺す\n"
 "\\>\\C[1]                 shake"
 msgstr ""
 
@@ -434,49 +434,49 @@ msgstr ""
 
 #. ID 67, Line 385
 msgid ""
-"\\> ‚ÇA‚Ç‚¤‚È‚Á‚Ä‚ñ‚¾cc\n"
-"\\> ‚¨‚©‚µ‚¢‚¾‚ëA‚Ä‚ß‚¦A‚»‚Ì‹­‚³‚Ícc"
+"\\> ど、どうなってんだ……\n"
+"\\> おかしいだろ、てめえ、その強さは……"
 msgstr ""
 
 #. ID 67, Line 387
-msgid "\\> ‚Ü‚³‚©A‚ ‚Ìcc‚¹A¶‘Ì•ºŠícc"
+msgid "\\> まさか、あの……せ、生体兵器……"
 msgstr ""
 
 #. ID 67, Line 391
 msgid ""
-"\\> ‚¢‚â‚¢‚âA‚¨A‰´‚ªˆ«‚©‚Á‚½I\n"
-"\\> ‚»‚ÌAˆ«‹C‚Í‚È‚©‚Á‚½‚ñ‚¾‚æI"
+"\\> いやいや、お、俺が悪かった！\n"
+"\\> その、悪気はなかったんだよ！"
 msgstr ""
 
 #. ID 67, Line 393
 msgid ""
-"\\> ‚½‚Ü‚½‚ÜAŽ–î‚ª‚³cc\n"
-"\\> ‚¢‚âA‚Ù‚çA‚ÈH"
+"\\> たまたま、事情がさ……\n"
+"\\> いや、ほら、な？"
 msgstr ""
 
 #. ID 67, Line 395
-msgid "\\> ‚ÝAŒ©“¦‚µ‚Ä‚­‚ê‚æccH"
+msgid "\\> み、見逃してくれよ……？"
 msgstr ""
 
 #. ID 67, Line 404
-msgid "\\> I"
+msgid "\\> ！"
 msgstr ""
 
 #. ID 67, Line 416
 #. ID 67, Line 677
 #. ID 69, Line 672
-msgid "\\> ccccccB"
+msgid "\\> ………………。"
 msgstr ""
 
 #. ID 67, Line 424
-msgid "\\> ‚®‚¨A‚ª‚ÁccccI"
+msgid "\\> ぐお、がっ…………！"
 msgstr ""
 
 #. ID 67, Line 436
 msgid ""
 "\\S[6]\n"
 "\n"
-"@@@@@@ ‰Ì‚Ì‚È‚¢¢ŠE‚Í\\|\\.\\.@ŠDF‚Ì‹ó\\|\\|\\|\\^@@@@@@"
+"　　　　　　 歌のない世界は\\|\\.\\.　灰色の空\\|\\|\\|\\^　　　　　　"
 msgstr ""
 
 #. ID 67, Line 443
@@ -484,22 +484,22 @@ msgstr ""
 #. ID 67, Line 1104
 #. ID 67, Line 1152
 #. ID 69, Line 566
-msgid "\\> Ž€‘Ì‚Í‰ñ•œ–ò‚ð‚P‚ÂŠŽ‚µ‚Ä‚¢‚½B"
+msgid "\\> 死体は回復薬を１つ所持していた。"
 msgstr ""
 
 #. ID 67, Line 466
 #. ID 68, Line 515
 msgid ""
-"\\> ‚­‚»‚ÁA‚±‚±‚Ü‚Å‚È‚Ì‚©cc\n"
-"\\> ‚±A‚±‚ñ‚ÈA‚Æ‚±‚ë‚Åcc"
+"\\> くそっ、ここまでなのか……\n"
+"\\> こ、こんな、ところで……"
 msgstr ""
 
 #. ID 67, Line 476
 #. ID 68, Line 523
 msgid ""
-"\\> ‚®‚£‚Ácc\n"
-"\\> Ž„‚Ì–½‰^‚àA‚±‚±‚Ü‚Å‚ÆA\n"
-"\\> ‚¢‚¤A‚©ccH"
+"\\> ぐぅっ……\n"
+"\\> 私の命運も、ここまでと、\n"
+"\\> いう、か……？"
 msgstr ""
 
 #. ID 67, Line 479
@@ -510,57 +510,57 @@ msgstr ""
 #. ID 67, Line 488
 #. ID 68, Line 533
 msgid ""
-"\\> ‚Ç‚¤‚µ‚Äccg‘Ì‚ª—â‚½‚¢cc\n"
-"\\> Š¦‚¢‚æ‚£cc"
+"\\> どうして……身体が冷たい……\n"
+"\\> 寒いよぅ……"
 msgstr ""
 
 #. ID 67, Line 490
 #. ID 68, Line 535
-msgid "\\> ƒ_ƒŠƒ„‚¿‚á‚ñcc"
+msgid "\\> ダリヤちゃん……"
 msgstr ""
 
 #. ID 67, Line 499
 #. ID 68, Line 542
 msgid ""
-"\\> ‚±A‚±‚±‚ÅŽ„‚ªŽ€‚ñ‚¾‚çcc\n"
-"\\> ”Þ‚Ícc¢ŠE‚Ícc"
+"\\> こ、ここで私が死んだら……\n"
+"\\> 彼は……世界は……"
 msgstr ""
 
 #. ID 67, Line 501
 #. ID 68, Line 544
-msgid "\\> ‚ cc‚ cc"
+msgid "\\> あ……あ……"
 msgstr ""
 
 #. ID 67, Line 509
 #. ID 69, Line 527
 msgid ""
-"\\> ‚¦‚Áccƒ_ƒ‚¶‚á‚ñB\n"
-"\\> ŒN‚ª‚ÁI@ŒN‚ªŽ€‚Ê‚ÌI\n"
-"\\> ‹ê‚µ‚ñ‚ÅA‚à‚ª‚¢‚ÄA”‡‚¢‚¸‚Á‚Ä‚³B"
+"\\> えっ……ダメじゃん。\n"
+"\\> 君がっ！　君が死ぬの！\n"
+"\\> 苦しんで、もがいて、這いずってさ。"
 msgstr ""
 
 #. ID 67, Line 512
 #. ID 69, Line 530
 msgid ""
-"\\> –l‚©‚ç‚±‚ñ‚ÈAŒŒ‚ªAŒŒ‚ª‚Ë‚¦B\n"
-"\\> ‚ ‚ [A”²‚¯‚Ä‚¢‚­–l‚ÌŒŒ‚ªB"
+"\\> 僕からこんな、血が、血がねえ。\n"
+"\\> ああー、抜けていく僕の血が。"
 msgstr ""
 
 #. ID 67, Line 514
 #. ID 69, Line 532
-msgid "\\> ‚Ð[B‚¨‚Ù‚Ù‚Ð‚¨‚Ð‚Ð‚Ó‚Ð‚Í‚Ðcc"
+msgid "\\> ひー。おほほひおひひふひはひ……"
 msgstr ""
 
 #. ID 67, Line 515
 #. ID 69, Line 533
 msgid ""
-"\\> ƒ_ƒ‚¾‚æI@‚¨A–Ê”’‚­‚È‚¢‚æI\n"
-"\\> –l‚ªŽ€‚Ê‚Ì‚ÍA•|‚¢‚¶‚á‚È‚¢‚©B"
+"\\> ダメだよ！　お、面白くないよ！\n"
+"\\> 僕が死ぬのは、怖いじゃないか。"
 msgstr ""
 
 #. ID 67, Line 517
 #. ID 69, Line 535
-msgid "\\> ‘‚­A•‚¯A•‚¯cccc"
+msgid "\\> 早く、助け、助け…………"
 msgstr ""
 
 #. ID 67, Line 532
@@ -568,16 +568,16 @@ msgstr ""
 msgid ""
 "\\S[6]\n"
 "\n"
-"@@@@@@ @@@@’É‚¢‚Ì‚Í\\|\\|\\|\\^"
+"　　　　　　 　　　　痛いのは\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 67, Line 536
 #. ID 69, Line 554
 msgid ""
 "\\S[6]\n"
-"@@@@@@ —ô‚¯‚ÄçØ‚ê‚é“÷‚Å‚à‚È‚­\\|\\.\\.@@@@@@\n"
+"　　　　　　 裂けて千切れる肉でもなく\\|\\.\\.　　　　　　\n"
 "\n"
-"@@@@@@ ‚«‚µ‚ñ‚ÅÓ‚¯‚éœ‚Å‚à‚È‚­\\|\\|\\|\\^"
+"　　　　　　 きしんで砕ける骨でもなく\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 67, Line 541
@@ -585,7 +585,7 @@ msgstr ""
 msgid ""
 "\\S[6]\n"
 "\n"
-"@@@@@@  ŒŒ‚ð—¬‚µ–ã‚¦‚é\\|\\.\\.@Ž„‚ÌS\\|\\|\\|\\^"
+"　　　　　　  血を流し悶える\\|\\.\\.　私の心\\|\\|\\|\\^"
 msgstr ""
 
 #. ID 67, Line 616
@@ -593,81 +593,81 @@ msgstr ""
 msgid ""
 "\\S[6]\n"
 "\n"
-"@@@@@@‚Ê‚ß‚Ê‚ß‚Æ‚µ‚½\\|\\.\\.@•s‰õ‚È‰xŠy\\|\\|\\|\\^@@@@"
+"　　　　　　ぬめぬめとした\\|\\.\\.　不快な悦楽\\|\\|\\|\\^　　　　"
 msgstr ""
 
 #. ID 67, Line 642
 #. ID 69, Line 637
 msgid ""
-"\\> ƒ_ƒŠƒ„cc\n"
-"\\> ƒ_ƒŠƒ„ccI"
+"\\> ダリヤ……\n"
+"\\> ダリヤ……！"
 msgstr ""
 
 #. ID 67, Line 645
 #. ID 69, Line 640
 msgid ""
-"\\> ’N‚ªA‚ ‚ AƒNƒ\\ƒbI\n"
-"\\> ‚±‚ñ‚ÈA‚±‚ñ‚È‚Ð‚Ç‚¢‚±‚Æ‚ðccI"
+"\\> 誰が、ああ、クソッ！\n"
+"\\> こんな、こんなひどいことを……！"
 msgstr ""
 
 #. ID 67, Line 648
 #. ID 69, Line 643
 msgid ""
-"\\> ‚ÁccI\n"
-"\\> ‚Ç‚¤‚µ‚ÄA‚Ç‚¤‚µ‚Äƒ_ƒŠƒ„‚È‚ñ‚¾I\n"
-"\\> ‘¼‚Ì‚Ç‚¤‚Å‚à‚¢‚¢“z‚Å‚¢‚¢‚¾‚ë‚¤‚ªI"
+"\\> っ……！\n"
+"\\> どうして、どうしてダリヤなんだ！\n"
+"\\> 他のどうでもいい奴でいいだろうが！"
 msgstr ""
 
 #. ID 67, Line 652
 #. ID 69, Line 647
 msgid ""
-"\\> ŒŒ‚ªccŽ~‚Ü‚ç‚È‚¢cc\n"
-"\\> ƒNƒ\\ƒbAƒNƒ\\ƒbI@ƒNƒY‚Ç‚à‚ªI\n"
-"\\> ¶‚«‚é‰¿’l‚à‚È‚¢ƒSƒ~‚Ç‚à‚Ì•ªÛ‚ÅI"
+"\\> 血が……止まらない……\n"
+"\\> クソッ、クソッ！　クズどもが！\n"
+"\\> 生きる価値もないゴミどもの分際で！"
 msgstr ""
 
 #. ID 67, Line 656
 #. ID 69, Line 651
 msgid ""
-"\\> Žè’i‚Ícc‚à‚¤‚ ‚ê‚µ‚©‚È‚¢B\n"
-"\\> ¶‘Ì•ºŠí‚Æ‚µ‚ÄA‹`‘Ì‚ðˆÚA‚·‚é‚µ‚©B"
+"\\> 手段は……もうあれしかない。\n"
+"\\> 生体兵器として、義体を移植するしか。"
 msgstr ""
 
 #. ID 67, Line 659
 #. ID 69, Line 654
 msgid ""
-"\\> ‚Å‚àA¶‚«‚é‚½‚ß‚¾B\n"
-"\\> ‚¨‘O‚ÍA¶‚«‚È‚¯‚ê‚Î‚È‚ç‚È‚¢cc"
+"\\> でも、生きるためだ。\n"
+"\\> お前は、生きなければならない……"
 msgstr ""
 
 #. ID 67, Line 662
 #. ID 69, Line 657
 msgid ""
-"\\> ‹°‚ç‚­‚ÍA”]‚ÉáŠQ‚àŽc‚é‚¾‚ë‚¤B\n"
-"\\> ³í‚ÈAlŠÔ‚ç‚µ‚¢¶Šˆ‚ÍA\n"
-"\\> “ñ“x‚Æo—ˆ‚È‚¢‚©‚à‚µ‚ê‚È‚¢cc"
+"\\> 恐らくは、脳に障害も残るだろう。\n"
+"\\> 正常な、人間らしい生活は、\n"
+"\\> 二度と出来ないかもしれない……"
 msgstr ""
 
 #. ID 67, Line 666
 #. ID 69, Line 661
 msgid ""
-"\\> ‚¾‚ªA¶‚«‚ëB\\<\\!\n"
-"\\> ‚»‚µ‚Ä–]‚Þ‚Ü‚Ü‚Ì‘ŠŽè‚ðŽE‚¹I"
+"\\> だが、生きろ。\\<\\!\n"
+"\\> そして望むままの相手を殺せ！"
 msgstr ""
 
 #. ID 67, Line 669
 #. ID 69, Line 664
 msgid ""
-"\\> ‚¨‘O‚ª‘ž‚¢‚ÆŽv‚¤‚È‚çA\n"
-"\\> ¢ŠE’†‚ÌlŠÔ‚ðŽE‚µ‚Ä‚à\\‚í‚È‚¢I"
+"\\> お前が憎いと思うなら、\n"
+"\\> 世界中の人間を殺しても構わない！"
 msgstr ""
 
 #. ID 67, Line 672
 #. ID 69, Line 667
 msgid ""
-"\\> ‚à‚µA‚à‚µ‚àcc\n"
-"\\> ‚¨‘O‚ª‚»‚¤–]‚Þ‚Ì‚È‚çA\n"
-"\\> ‚½‚Æ‚¦‚±‚ÌŽ„‚Å‚ ‚Á‚Ä‚àcc"
+"\\> もし、もしも……\n"
+"\\> お前がそう望むのなら、\n"
+"\\> たとえこの私であっても……"
 msgstr ""
 
 #. ID 67, Line 707
@@ -682,22 +682,22 @@ msgid ""
 msgstr ""
 
 #. ID 67, Line 1205
-msgid "\\> ƒZƒC‚ÌŽ€‘Ì‚Í‰ñ•œ–ò‚ð‚P‚ÂŠŽ‚µ‚Ä‚¢‚½B"
+msgid "\\> セイの死体は回復薬を１つ所持していた。"
 msgstr ""
 
 #. ID 67, Line 1213
-msgid "\\> ƒGƒCƒuƒ‰ƒnƒ€‚ÌŽ€‘Ì‚Í‰ñ•œ–ò‚ð‚P‚ÂŠŽ‚µ‚Ä‚¢‚½B"
+msgid "\\> エイブラハムの死体は回復薬を１つ所持していた。"
 msgstr ""
 
 #. ID 67, Line 1221
-msgid "\\> ƒJƒ^ƒŠƒi‚ÌŽ€‘Ì‚Í‰ñ•œ–ò‚ð‚P‚ÂŠŽ‚µ‚Ä‚¢‚½B"
+msgid "\\> カタリナの死体は回復薬を１つ所持していた。"
 msgstr ""
 
 #. ID 67, Line 1229
-msgid "\\> ƒ\\[ƒjƒƒ‚ÌŽ€‘Ì‚Í‰ñ•œ–ò‚ð‚P‚ÂŠŽ‚µ‚Ä‚¢‚½B"
+msgid "\\> ソーニャの死体は回復薬を１つ所持していた。"
 msgstr ""
 
 #. ID 68, Line 643
-msgid "\\> ƒ_ƒŠƒ„‚Íâ–½‚µ‚½B"
+msgid "\\> ダリヤは絶命した。"
 msgstr ""
 
