--- a/game/Language/en/Map0001.po
+++ b/game/Language/en/Map0001.po
@@ -11,8 +11,8 @@ msgstr ""
 #. ID 1, Page 1, Line 5, Pos (0,0)
 #. Contains choice at line 3 (2 options)
 msgid ""
-"@@@@\\>\\C[2]õ\\C[0]@Do you see the opening scene?\\<\\.\\.\\.@\n"
-"@@"
+"　　　　\\>\\C[2]†\\C[0]　Do you see the opening scene?\\<\\.\\.\\.　\n"
+"　　"
 msgstr ""
 
 #. ID 1, Page 1, Line 7, Pos (0,0)
